<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgendarFragment">

    <TextView
        android:layout_marginTop="180dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_agendar"
        android:textSize="25sp"
        android:gravity="center"/>


    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/registro_style"
        android:drawablePadding="10dp"
        android:text="@string/select_day"
        android:drawableStart="@drawable/ic_date"
        android:ems="10"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/registro_style"
        android:drawablePadding="10dp"
        android:text="@string/hora_cita"
        android:drawableStart="@drawable/ic_time"
        android:ems="10"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/registro_style"
        android:drawablePadding="10dp"
        android:text="@string/tipo_cita"
        android:drawableStart="@drawable/ic_arrow"
        android:ems="10"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/continuar_button"
        android:background="@drawable/btn_style"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"

        />
</LinearLayout>