<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/maya"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:gravity="center">
    </LinearLayout>

    <EditText
        android:id="@+id/etNombreCompleto"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/registro_style"
        android:ems="10"
        android:hint="@string/nombre_completo"
        android:drawableLeft="@drawable/nombre"
        android:drawablePadding="20dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/registro_style"
        android:ems="10"
        android:hint="@string/user_name"
        android:drawableLeft="@drawable/usuario"
        android:drawablePadding="20dp"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/registro_style"
        android:ems="10"
        android:inputType="number"
        android:drawableLeft="@drawable/telefono"
        android:drawablePadding="20dp"
        android:hint="@string/telefono_usuario" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/registro_style"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/usuario"
        android:drawablePadding="20dp"
        android:hint="@string/correo_usuario" />

    <EditText
        android:id="@+id/etCodigo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/registro_style"
        android:ems="10"
        android:inputType="number"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="20dp"
        android:hint="@string/codigo_acceso" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/registro_style"
        android:ems="10"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:hint="@string/password_name"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/registrar_boton"
        android:background="@drawable/btn_style"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"

        />

</LinearLayout>