<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/maya"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/textUsuario"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/user_name"
        android:drawableLeft="@drawable/usuario"
        android:drawablePadding="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/edt_style"/>

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/password_name"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edt_style"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/login_boton"

        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_style"
        android:onClick="iniciar"

        />

    <TextView
        android:id="@+id/tvOlvidoPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:text="@string/password_forget" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal"
        android:gravity="center">

    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:text="@string/registrar_boton"

        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_register"
        android:onClick="registro"
        />

</LinearLayout>